--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabores DAM | Cocina Tradicional y Moderna</title>
+    <title>Sabores DAM</title>
     <meta name="author" content="Hugo Muñoz Vallina">
     <meta name="keywords" content="restauramte, comida, carta, menú">
 </head>
@@ -28,6 +28,56 @@
     </header>
 
     <main>
+        <section>
+            <h2>Menú del día</h2>
+
+            <table>
+                <caption>Menú especial por el día de Les Cebolles Rellenes.</caption>
+                
+                <thead>
+                    <tr>
+                        <th scope="col">Plato</th>
+                        <th scope="col">Tipo de Plato</th>
+                        <th scope="col">Precio</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Paté de Cabracho</td>
+                        <td>Primero</td>
+                        <td>7,50€</td>
+                    </tr>
+                    <tr>
+                        <td>Callos</td>
+                        <td>Primero</td>
+                        <td>9,00€</td>
+                    </tr>
+                    <tr>
+                        <td>Cebollas Rellenas de Bonito</td>
+                        <td>Segundo</td>
+                        <td>12,50€</td>
+                    </tr>
+                    <tr>
+                        <td>Lechazo al Horno con Patatas</td>
+                        <td>Segundo</td>
+                        <td>16,00€</td>
+                    </tr>
+                    <tr>
+                        <td>Casadielles</td>
+                        <td>Postre</td>
+                        <td>4,00€</td>
+                    </tr>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td colspan="3">Menú completo (Primero, Segundo y Postre): <b>**27€**</b>. Consulta alérgenos en la sección inferior.</td>
+                    </tr>
+                </tfoot>
+            </table>
+
+        </section>
     </main>
 
     <footer>
