20251103 Añadida Información Adiccional

--- a/index.html
+++ b/index.html
@@ -72,12 +72,39 @@
 
                 <tfoot>
                     <tr>
-                        <td colspan="3">Menú completo (Primero, Segundo y Postre): <b>**27€**</b>. Consulta alérgenos en la sección inferior.</td>
+                        <td colspan="3">Menú completo (Primero, Segundo y Postre): <strong>27€</strong>. Consulta alérgenos en la sección inferior.</td>
                     </tr>
                 </tfoot>
             </table>
-
         </section>
+
+        <section>
+            <h2>Información y Políticas</h2>
+
+            <details>
+                <summary>Información de alérgenos</summary>
+                <p>Nuestro personal puede informarle. No obstante, tenga en cuenta las siguientes advertencias generales:</p>
+                <ul>
+                    <li><strong>Gluten:</strong> Presente en la Casadiella, Lechazo.</li>
+                    <li><strong>Pescado:</strong> Componente principal del Paté de Cabracho y en les Cebolles Rellenes.</li>
+                    <li><strong>Lácteos:</strong> Presentes en el Paté de Cabracho y Postre.</li>
+                    <li><strong>Frutos secos:</strong> Presentes en la Casadiella.</li>
+                </ul>
+            </details>
+            <hr> 
+            <details>
+                <summary>Política de reservas</summary>
+                <p>Por favor, siga nuestras recomendaciones para asegurar su mesa:</p>
+                <ol>
+                    <li><em>Elige</em> fecha y hora a través de nuestro sistema de diálogo.</li>
+                    <li><em>Confirme</em> el número exacto de asistentes.</li>
+                    <li>Asegúrese de recibir <em>su confirmación</em> de la reserva.</li>
+                    <li>Se ruega un máximo de <em>15 minutos de cortesía</em> o la reserva será anulada.</li>
+                    <li>Para grupos de más de 6 personas, se requiere un depósito inicial.</li>
+                </ol>
+            </details>
+        </section>
+
     </main>
 
     <footer>
