20251103 Incluidos Servicios del Restaurante

--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                     <li><strong>Frutos secos:</strong> Presentes en la Casadiella.</li>
                 </ul>
             </details>
-            <hr> 
             <details>
                 <summary>Política de reservas</summary>
                 <p>Por favor, siga nuestras recomendaciones para asegurar su mesa:</p>
@@ -104,6 +103,22 @@
                 </ol>
             </details>
         </section>
+
+        <article>
+            <h2>Nuestros Servicios</h2>
+            <ul>
+                <li>Terraza exterior.</li>
+                <li>Menú infantil.</li>
+                <li>Pago con tarjeta.</li>
+                <li>Para llevar:
+                    <ol>
+                        <li>Realiza tu pedido por teléfono o web antes de las 13:00h.</li>
+                        <li>Acude a la barra a la hora acordada.</li>
+                        <li>Confirme su pedido y disfruta en casa.</li>
+                    </ol>
+                </li>
+            </ul>
+        </article>
 
     </main>
 
