--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
             </ul>
         </article>
 
+        <aside>
+            <h2>Información Práctica</h2>
+            <dl>
+                <dt>Horario:</dt>
+                <dd>Lunes a Sábado: 12:00 – 23:00</dd>
+                <dd>Domingos: 12:00 – 17:00</dd>
+
+                <dt>Accesibilidad:</dt>
+                <dd>Entrada adaptada y baño accesible.</dd>
+
+                <dt>Aparcamiento:</dt>
+                <dd>Zona de estacionamiento gratuito para clientes.</dd>
+
+                <dt>Recomendación:</dt>
+                <dd>Se aconseja reservar mesa los fines de semana.</dd>
+            </dl>
+        </aside>
+
     </main>
 
     <footer>
