--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
     </dialog>
 
     <footer>
+        <hr>
+        <address>
+            <strong>Restaurante Sabores DAM</strong>
+            <br>
+            📍 Calle Sabores, 42 – Oviedo
+            <br>
+            📞 Tel: <a href="tel:+34985123456">985 123 456</a>
+            <br>
+            📧 Correo: <a href="mailto:info@saboresdam.es">info@saboresdam.es</a>
+            <br>
+            🌐 Web: <a href="http://www.saboresdam.es" target="_blank">www.saboresdam.es</a>
+        </address>
+        <p>&copy; 2025 Sabores DAM. Hugo Muñoz Vallina.</p>
     </footer>
     
 </body>
